Fix mobile layout bugs.

--- a/resources/assets/less/views/login.less
+++ b/resources/assets/less/views/login.less
@@ -3,7 +3,8 @@
 #main-content-login {
     background: url("/images/bg.jpg") no-repeat center center fixed;
     background-size: cover;
-    padding-top: 5rem;
+    margin-left: 0;
+    margin-right: 0;
     margin-bottom: 1rem !important;
     margin-top: 0 !important;
     box-shadow: 0 2px 10px #888;
